--- a/css-style.css
+++ b/css-style.css
@@ -217,7 +217,7 @@ img {
 
 .navbar a,
 .dropbtn {
-  color: purple;
+  color: white;
   text-decoration: none;
   font-weight: bold;
   background: none;
@@ -234,7 +234,7 @@ img {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: purple;
+  background-color: #e4a6d4;
   min-width: 180px;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   border-radius: 8px;
@@ -249,7 +249,7 @@ img {
 }
 
 .dropdown-content a:hover {
-  background-color: purple;
+  background-color: #e4a6d4;
 }
 
 .dropdown:hover .dropdown-content {
