--- a/css-style.css
+++ b/css-style.css
@@ -212,7 +212,7 @@ img {
   justify-content: center;
   gap: 20px;
   padding: 15px;
-  background: #e4a6d4;
+  background: purple;
 }
 
 .navbar a,
