--- a/css-style.css
+++ b/css-style.css
@@ -234,7 +234,7 @@ img {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #e4a6d4;
+  background-color: #444;
   min-width: 180px;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   border-radius: 8px;
