--- a/css-style.css
+++ b/css-style.css
@@ -234,7 +234,7 @@ img {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #444;
+  background-color: #e4a6d4;
   min-width: 180px;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   border-radius: 8px;
@@ -242,7 +242,7 @@ img {
 }
 
 .dropdown-content a {
-  color: #444;
+  color: white;
   padding: 10px 12px;
   text-decoration: none;
   display: block;
